[gd_scene load_steps=9 format=3 uid="uid://c3wlqqbvfcd0b"]

[ext_resource type="Script" uid="uid://du6g16omklibg" path="res://calibur_enemy.gd" id="1_20y01"]
[ext_resource type="PackedScene" uid="uid://baskf6wqi6kph" path="res://VGC models/Calibur/calibur__vgdc.glb" id="2_sl7ya"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uga4a"]
radius = 0.521318
height = 2.45744

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1beea"]
radius = 0.846896
height = 3.06325

[sub_resource type="CylinderShape3D" id="CylinderShape3D_brw18"]
radius = 15.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_tbkwj"]
radius = 3.99659

[sub_resource type="CylinderShape3D" id="CylinderShape3D_26wy5"]
radius = 7.17328

[sub_resource type="CylinderShape3D" id="CylinderShape3D_i5ah6"]
radius = 1.02214

[node name="Calibur_enemy" type="CharacterBody3D" groups=["Enemy"]]
script = ExtResource("1_20y01")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.18776, 1.25377, -0.0432153)
shape = SubResource("CapsuleShape3D_uga4a")

[node name="DamageArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.176795, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.978898, 1.06418, 0)
shape = SubResource("CapsuleShape3D_1beea")

[node name="AttackRange" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.826052, 1.33266, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackRange"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.181069, 0, 0)
shape = SubResource("CylinderShape3D_brw18")

[node name="AttackArea_stab" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.23416, 1.33266, -0.658654)

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea_stab"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.109168, -0.144243, 0.677778)
shape = SubResource("CylinderShape3D_tbkwj")

[node name="AttackArea_jump" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.131954, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea_jump"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.18241, 1.57901, 0)
shape = SubResource("CylinderShape3D_26wy5")

[node name="AttackArea_stomp" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0901107, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea_stomp"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.22896, 1.378, 0.171589)
shape = SubResource("CylinderShape3D_i5ah6")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Sketchfab_Scene" parent="." instance=ExtResource("2_sl7ya")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.22152, 0, -0.251401)

[node name="Skeleton3D" parent="Sketchfab_Scene/Sketchfab_model/470fbca5ee3345d09f1c05d26df614bd_fbx/Object_2/RootNode/Armature/Object_8" index="0"]
bones/1/position = Vector3(0, -0.258292, 1.43535)
bones/1/rotation = Quaternion(0.765398, 4.65661e-10, 2.98769e-10, 0.643558)
bones/2/rotation = Quaternion(0.211153, -1.16522e-07, -2.51715e-08, 0.977453)
bones/3/rotation = Quaternion(0.0362505, -1.19131e-07, -1.29642e-08, 0.999343)
bones/4/rotation = Quaternion(0.435078, 3.93575e-08, -1.88443e-07, 0.900393)
bones/5/rotation = Quaternion(-0.121929, -0.337296, -0.621475, 0.696515)
bones/6/rotation = Quaternion(-0.201618, -0.0540852, -0.541827, 0.814155)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(0.152333, -0.0207461, -0.101971, 0.982836)
bones/7/scale = Vector3(1, 1, 0.999999)
bones/8/position = Vector3(-0.135848, 0.123519, -0.409294)
bones/8/rotation = Quaternion(-0.121929, 0.337296, 0.621475, 0.696515)
bones/9/rotation = Quaternion(-0.20162, 0.0540837, 0.541825, 0.814156)
bones/9/scale = Vector3(1, 1, 1)
bones/10/rotation = Quaternion(0.152338, 0.0207461, 0.101974, 0.982835)
bones/10/scale = Vector3(1, 1, 1)
bones/11/rotation = Quaternion(0.0144168, 0.200861, 0.950449, -0.236843)
bones/12/rotation = Quaternion(-0.177784, 0.00985947, -0.140491, 0.973939)
bones/13/rotation = Quaternion(-0.0144169, 0.20086, 0.950449, 0.236843)
bones/14/rotation = Quaternion(-0.177782, -0.00985964, 0.14049, 0.97394)
bones/15/position = Vector3(0.401895, -0.310638, 0.714397)
bones/15/rotation = Quaternion(-0.106567, 0.748556, -0.644215, 0.115304)
bones/16/position = Vector3(-0.401895, -0.310638, 0.714397)
bones/16/rotation = Quaternion(0.106567, 0.748556, -0.644215, -0.115304)
bones/17/position = Vector3(0.753712, -0.235613, 1.18638)
bones/17/rotation = Quaternion(0.0242928, -0.682905, 0.729365, -0.0328255)
bones/23/position = Vector3(-0.753712, -0.235613, 1.18638)
bones/23/rotation = Quaternion(-0.0242928, -0.682905, 0.729365, 0.0328255)
bones/29/position = Vector3(0.39709, -0.246205, 0.281652)
bones/29/rotation = Quaternion(-0.00260013, -0.000161944, 0.998063, -0.0621623)
bones/30/position = Vector3(0.39709, -0.246205, 0.281652)
bones/30/rotation = Quaternion(-0.00256933, -0.000430597, 0.986242, -0.165285)
bones/31/position = Vector3(-0.39709, -0.246205, 0.281652)
bones/31/rotation = Quaternion(0.00260013, -0.000161944, 0.998063, 0.0621623)
bones/32/position = Vector3(-0.39709, -0.246205, 0.281652)
bones/32/rotation = Quaternion(0.00256934, -0.000430502, 0.986242, 0.165285)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="Sketchfab_Scene/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]

[editable path="Sketchfab_Scene"]
